dark mode css issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@ label {
 
 input:focus,
 textarea:focus {
-  outline: solid var(--btn-clr);
+  outline: solid #6dabe4;
 }
 
 @media only screen and (max-width: 600px) {
@@ -308,12 +308,17 @@ textarea:focus {
   height: 1em;
 }
 
+.main-header {
+  color: black;
+}
+
 .main-footer {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 6.5vh;
   background-color: #ecf0f1;
+  color: black;
 }
 .delete-button:hover,
 .add-button:hover {
